syntax = "proto3";

option csharp_namespace = "GrpcChat.Contracts";

service AuthenticationService {
	rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
	string username = 1;
	string invitation_code = 2;
}

message LoginResponse {
	oneof result {
		LoginSuccess success = 1;
		LoginFailure failure = 2;
	}
}

message LoginSuccess {
	string auth_token = 1;
}

message LoginFailure {
	string fail_reason = 1;
}